# pydwarf

./: .clangd  .dockerignore  .gitignore  BACKEND_STATUS_HONEST.md  CMakeLists.txt  CPP_WXWIDGETS_FEASIBILITY_STUDY.md  DEVELOPMENT.md  DOCKER_SETUP.md  Dockerfile  GUI_ROADMAP.md  PROGRESS.md  QT_ROADMAP.md  README.md  build.sh  docker-compose.yml
backend/: output.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: camera.py  camera_params.py  focus.py  motor.py  panorama.py
backend/app/lib/: dwarf_connection.py  dwarfii_astro.py  dwarfii_camera_params.py  dwarfii_focus.py  dwarfii_panorama.py  dwarfii_tracking.py
backend/app/models/: session.py
backend/app/services/: dwarf_ws.py
backend/app/services/proto/: base_pb2.py  focus_pb2.py
backend/app/utils/: constants.py
cpp_client/: CMakeLists.txt
cpp_client/src/: MainWindow.cpp  MainWindow.h  main.cpp
cpp_client/src/net/: DwarfWebSocketClient.cpp  DwarfWebSocketClient.h
cpp_client/src/proto/: panorama.proto
doc/: API_ENDPOINTS.md  API_IMPLEMENTATION_STATUS.md  media.json
dwarf_controller/src/: MainWindow.cpp  MainWindow.h
dwarf_controller/src/net/: DwarfWebSocketClient.h
dwarf_controller/src/proto/: astro.proto  camera.proto  focus.proto  tracking.proto
frontend/: index.html
frontend/css/: main.css
frontend/js/: api-client.js  constants.js  main.js
i18n/: DwarfController_de.ts  DwarfController_en.qm  DwarfController_en.ts
legacy/: BACKEND_COMPLETE.md  BACKEND_STATUS_FINAL.md  BEDIENUNGSANLEITUNG.md  Dockerfile  PROGRESS.md  docker-compose.yml  dwarf_api_doc.txt  find_dwarf.sh
legacy/backend/: inspect_motor.py  requirements.txt  verify_fix.py
legacy/backend/app/: database.py  main.py
legacy/backend/app/api/: album.py  astro.py  device.py  scanner.py  system.py  tracking.py
legacy/backend/app/lib/: __init__.py  dwarfii_api.py  dwarfii_astro.py  dwarfii_camera.py  dwarfii_motor.py  dwarfii_system.py  dwarfii_wide_camera.py
legacy/backend/app/models/: __init__.py  device.py  media.py
legacy/backend/app/services/: dwarf_client.py
legacy/backend/app/services/proto/: astro_pb2.py  camera_pb2.py  motor_pb2.py  system_pb2.py
legacy/backend/app/utils/: constants.py
legacy/database/: dwarf.db
legacy/doc/: API_FUNCTIONS.md  DWARF_II_API_COMPLETE.md  IMPLEMENTATION_STEPS.md  dwarf_api_extracted.txt
legacy/frontend/js/: api-client.js  constants.js
src/: MainWindow.cpp  MainWindow.cpp.backup  MainWindow.h  main.cpp
src/net/: DwarfCameraController.cpp  DwarfCameraController.h  DwarfFinder.cpp  DwarfFinder.h  DwarfFocusController.cpp  DwarfFocusController.h  DwarfHttpClient.cpp  DwarfHttpClient.h  DwarfMessageDispatcher.cpp  DwarfMessageDispatcher.h  DwarfMjpegStream.cpp  DwarfMjpegStream.h  DwarfMjpegView.cpp  DwarfMjpegView.h  DwarfMotorController.cpp  DwarfMotorController.h  DwarfWebSocketClient.cpp  ProtobufHelper.cpp  ProtobufHelper.h
src/proto/: base.proto  motor.proto  system.proto
